--- a/feed.html
+++ b/feed.html
@@ -45,12 +45,12 @@
 
         // document.getElementById("new").innerHTML = localStorage.getItem("name" );
         // document.getElementById("new1").innerHTML = localStorage.getItem("email");
-        document.getElementById("new").innerHTML ="Name: " + username2
-        document.getElementById("new1").innerHTML ="Email: " + useremail2
-        document.getElementById("new2").innerHTML ="Password: " + userpass2
+        document.getElementById("new").innerHTML = "Name: " + username2
+        document.getElementById("new1").innerHTML = "Email: " + useremail2
+        document.getElementById("new2").innerHTML = "Password: " + userpass2
         console.log(username2)
     </script>
 
-
+    <!-- xyz -->
 
 </html>
